# fase

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  clang-format.sh  header_style
docs/: clieditor.md  get_started.ja.md
docs/developer_manuals/: core.ja.md  variable.ja.md
examples/: extra_parts.h  fase_gl_utils.h
examples/clieditor/: main.cpp
examples/exported_pipe/: main.cpp  sample.json
examples/guieditor/: extra_parts.h  fase_gl_utils.h  fase_var_generators.h  init_gl.h  main.cpp  main_opencv.cpp
examples/guieditor_for_first_touch/: main.cpp
examples/guieditor_opencv/: main.cpp
examples/std_parts/: exportable.cpp  exportable_sample.json  fixed.cpp  fixed_sample.json  funcs.h  hard_callable.cpp  hard_callable_sample.json
src/: auto_fb_adder.h  callable.h  callable_impl.h  cli_editor.cpp  cli_editor_impl.h  core.cpp  core.h  core_impl.h  core_util.cpp  core_util.h  dst_code.cpp  editor.cpp  editor.h  editor_cli.cpp  editor_cli.h  editor_gui.cpp  editor_gui.h  editor_gui_menus.cpp  editor_gui_util.h  editor_gui_view.cpp  editor_gui_view.h  exceptions.h  extensions.h  fase.cpp  fase.h  fase_impl.h  function_node.h  gui.cpp  gui.h  gui_editor.cpp  parts_base.h  pipeline_editor.cpp  pipeline_editor.h  test.cpp  type_utils.cpp  type_utils.h  variable.h
src/fase/: auto_fb_adder.h  binded_pipe.cpp  binded_pipe.h  callable.h  callable_impl.h  core.cpp  core.h  core_build.cpp  core_impl.h  core_util.cpp  core_util.h  debug_macros.h  dst_code.cpp  editor.h  exceptions.h  extensions.h  fase.cpp  fase.h  fase_impl.h  function_node.h  parts_base.h  type_utils.cpp  type_utils.h  variable.h
src/fase/gui_editor/: editor.cpp  editor_impl.h  menus.cpp  popups.cpp  utils.h  view.cpp  view.h
src/fase2/: auto_uf_adder.h  code_gen.cpp  common.cpp  common.h  constants.h  core.cpp  core.h  debug_macros.h  exceptions.h  fase.h  manager.cpp  manager.h  parts_base.h  stdparts.h  type_converter.cpp  univ_functions.h  utils.h  variable.h
src/fase2/imgui_editor/: imgui_commons.cpp  imgui_commons.h  imgui_editor.cpp  imgui_editor.h  links_view.cpp  links_view.h  pipe_edit_window.cpp  pipe_edit_window.h  setup_var_editors.cpp  setup_var_editors.h
src/gui_editor/: editor.cpp  editor_impl.h  menus.cpp  popups.cpp  preference.h  utils.h  view.cpp  view.h
test/: test.cpp  test_core.cpp  test_core_manager.cpp  test_fase.cpp  test_function.cpp  test_variable.cpp
